<resources>
    <string name="app_name">Chinpokomon</string>
    <string name="chinpokomon">CHINPOKOMON</string>
    <string name="volver">Volver</string>
    <string name="conoce_nuestra_marca">Conoce nuestra marca</string>
    <string name="todo">TODO</string>
    <string name="crea_tu_propio_chinpokomon">Crea tu propio Chinpokomon</string>
    <string name="imageview4">TODO</string>
    <string name="crea_tu_chinpokomon">CREA TU CHINPOKOMON</string>
    <string name="nombre_de_tu_chinpokomon">Nombre de tu Chinpokomon</string>
    <string name="tipo_de_tu_chinpokomon">Tipo de tu Chinpokomon</string>
    <string name="cambiar_dise_o_de_tu_chinpokomon">Cambiar diseño de tu Chinpokomon</string>
    <string name="imgDiseño">TODO</string>
    <string name="dise_o_de_tu_chinpokomon">Diseño de tu Chinpokomon</string>
    <string name="movimientos_de_tu_chinpokomon">Movimientos de tu Chinpokomon</string>
    <string name="morder">Morder</string>
    <string name="patear">Patear</string>
    <string name="pegar_tiros">Pegar tiros</string>
    <string name="dormir">Dormir</string>
    <string name="movimiento_de_tu_chinpokomon">Movimiento de tu Chinpokomon</string>
    <string name="opcion_negra_shiny">Opcion negra (Shiny)</string>
    <string name="incinerar">Incinerar</string>
    <string name="reconquistar_gibraltar">Reconquistar Gibraltar</string>
    <string name="cantar_flamenco">Cantar flamenco</string>
    <string name="enviar_resultados">ENVIAR RESULTADOS</string>
    <string name="texto1">TODO</string>
    <string name="texto2">Chinpokomon Company es un edificio corporativo detrás de la marca de juguetes Chinpokomon.</string>
    <string name="texto3">Mientras Luau\'s Toys cierra por la noche, el dueño de la tienda toma un Lambtron que emite comentarios contra el gobierno estadounidense. Sintiendo sospechas, decide viajar a Japón y buscar la dirección sobre el defecto del producto. Como el Sr. Hirohito y el Sr. Ose confunden constantemente al dueño de la tienda y lo felicitan por su gran pene, el dueño se siente halagado y decide irse sin tomar más medidas. Una vez que el dueño de la tienda se fue, Hirohito se pone furioso y ordena al Sr. Ose que convoque una reunión sobre la próxima fase para apoderarse de Estados Unidos. `Chinpo` es una palabra soez en japonés que significa pene (entendido como "chinchin"). El nombre de la marca traducida del japonés sería "Monstruo de pene pequeño".</string>

    <string name="texto4">NUESTRA EMPRESA</string>
    <string name="comprar_chinpokomon">Comprar Chinpokomon</string>
    <string name="fotoTienda">TODO</string>
    <string name="tienda_oficial">TIENDA OFICIAL</string>
    <string name="editar_hora_de_entrega">Editar hora de entrega</string>
    <string name="elegir_fecha">Elegir Fecha</string>
    <string name="editar_fecha_de_entrega">Editar fecha de entrega</string>
    <string name="textview">TextView</string>
    <string name="elegir_hora">Elegir Hora</string>
    <string name="carta1">TODO</string>
    <string name="carta2">TODO</string>
    <string name="carta3">TODO</string>
    <string name="carta4">TODO</string>
    <string name="carta5">TODO</string>
    <string name="fatdactyl_5_00">Fatdactyl 5,00€</string>
    <string name="pengin_1_00">Pengin 1,00€</string>
    <string name="shoe_1000_00">Shoe 1000,00€</string>
    <string name="velocirapstar_agotado">Velocirapstar *Agotado*</string>
    <string name="chu_chu_nezumi_0_10">Chu-chu Nezumi 0,10€</string>
    <string name="comprar">Comprar</string>
    <string name="comprar2">COMPRAR</string>
    <string name="chuchu_nezumi">Chuchu Nezumi</string>
    <string name="pengin">Pengin</string>
    <string name="shoe">Shoe</string>
    <string name="fatdactyl">Fatdactyl</string>
    <string name="precio_total">Precio Total</string>
    <string name="pengin_100">Pengin - 1,00€</string>
    <string name="chuchu_nezumi_0_10">Chuchu Nezumi - 0,10€</string>
    <string name="shoe_1000">Shoe - 1000,00€</string>
    <string name="fatactyl_5_00">Fatactyl - 5,00€</string>
    <string name="tu_coleccion">Tu colección</string>
    <string name="tu_coleccion_actualizado">Tu colección (ACTUALIZADO)</string>
    <string name="acceder">ACCEDER</string>
    <string name="registrar">REGISTRAR</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="PEZ">TODO</string>
    <string name="pipsa_sin_gluten">Pipsa sin gluten</string>
    <string name="cerrar_sesion">CERRAR SESION</string>
    <string name="datos_de_la_coleccion">Datos de la colección</string>
    <string name="tipo">TIPO</string>
    <string name="codigo">CODIGO</string>
    <string name="nombre">NOMBRE</string>
    <string name="nivel">NIVEL</string>
    <string name="movimiento">MOVIMIENTO</string>
    <string name="c_digo">Código</string>
    <string name="nivelRecycler">Nivel</string>
    <string name="movimientoRecycler">Movimiento</string>
    <string name="nombreRecycler">Nombre</string>
    <string name="tipoRecycler">Tipo</string>
    <string name="imagenRecycler">TODO</string>
    <string name="cdigo">Código</string>
    <string name="brrar">-</string>
    <string name="anadir">+</string>
    <string name="update">update</string>
</resources>