<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#FFEB3B">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="3dp"
            android:text="@string/movimiento"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/txtMovimiento"
            app:layout_constraintTop_toBottomOf="@+id/textView22"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/imgChinpokomon"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:paddingStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imagenRecycler"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txtCodigo"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/c_digo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNombreDatos"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/nombreRecycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />

        <TextView
            android:id="@+id/txtNivel"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/nivelRecycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreDatos" />

        <TextView
            android:id="@+id/txtTipo"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/tipoRecycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNivel" />

        <TextView
            android:id="@+id/txtMovimiento"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="3dp"
            android:text="@string/movimientoRecycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTipo" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/codigo"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/txtCodigo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/nombre"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/txtNombreDatos"
            app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:text="@string/nivel"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/txtNivel"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="1dp"
            android:text="@string/tipo"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/txtTipo"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>