<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context=".DatosUsuario">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="412dp"
        android:layout_height="81dp"
        android:autoText="false"
        android:background="#FFEB3B"
        android:paddingTop="20dp"
        android:text="@string/datos_de_la_coleccion"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        tools:ignore="Deprecated,MissingConstraints,TextSizeCheck,TextViewEdits,UnknownIdInLayout,VisualLintBounds" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btAñadir"
            android:layout_width="81dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="89dp"
            android:backgroundTint="#FFEB3B"
            android:onClick="anadir"
            android:text="@string/anadir"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btUpdate"
            android:layout_width="118dp"
            android:layout_height="51dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="9dp"
            android:backgroundTint="#FFEB3B"
            android:onClick="anadir"
            android:text="@string/update"
            android:textColor="#3F51B5"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtBorrar"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btAñadir2"
            android:layout_width="81dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="89dp"
            android:backgroundTint="#FFEB3B"
            android:onClick="borrar"
            android:text="@string/brrar"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/btAñadir"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtBorrar"
            android:layout_width="82dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="92dp"
            android:autofillHints=""
            android:background="#FFC107"
            android:ems="10"
            android:hint="@string/cdigo"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="#6D4C41"
            app:layout_constraintStart_toEndOf="@+id/btAñadir2"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="417dp"
        android:layout_height="516dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="SpeakableTextPresentCheck">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btCerrarSesion"
        android:layout_width="410dp"
        android:layout_height="66dp"
        android:backgroundTint="#FFEB3B"
        android:backgroundTintMode="add"
        android:onClick="volver"
        android:text="@string/cerrar_sesion"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>