<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btConocer"
                android:layout_width="260dp"
                android:layout_height="59dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="76dp"
                android:backgroundTint="#FFEB3B"
                android:onClick="conocer"
                android:text="@string/conoce_nuestra_marca"
                android:textColor="#364CC6"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints,TextSizeCheck" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="334dp"
                android:layout_height="218dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="39dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toTopOf="@+id/CrearChinpokomon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btConocer"
                app:srcCompat="@drawable/chinpokomon_company"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/CrearChinpokomon"
                android:layout_width="348dp"
                android:layout_height="57dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="19dp"
                android:backgroundTint="#FFEB3B"
                android:onClick="crearChinpokomon"
                android:text="@string/crea_tu_propio_chinpokomon"
                android:textColor="#364CC6"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:ignore="MissingConstraints,TextSizeCheck,VisualLintButtonSize" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="337dp"
                android:layout_height="188dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="39dp"
                android:contentDescription="@string/imageview4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CrearChinpokomon"
                app:srcCompat="@drawable/crear_chinpokomon"
                tools:ignore="MissingConstraints,ImageContrastCheck" />

            <Button
                android:id="@+id/comprarChinpokomon"
                android:layout_width="348dp"
                android:layout_height="57dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="33dp"
                android:backgroundTint="#FFEB3B"
                android:onClick="tienda"
                android:text="@string/comprar_chinpokomon"
                android:textColor="#364CC6"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                tools:ignore="MissingConstraints,TextSizeCheck,VisualLintButtonSize" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="371dp"
                android:layout_height="196dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/fotoTienda"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comprarChinpokomon"
                app:srcCompat="@drawable/tienda" />

            <Button
                android:id="@+id/button"
                android:layout_width="250dp"
                android:layout_height="117dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="#FFEB3B"
                android:onClick="coleccion"
                android:text="@string/tu_coleccion_actualizado"
                android:textColor="#364CC6"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                tools:ignore="VisualLintButtonSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="81dp"
        android:autoText="false"
        android:background="#FFEB3B"
        android:paddingTop="20dp"
        android:text="@string/chinpokomon"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Deprecated,MissingConstraints,TextViewEdits" />

</androidx.constraintlayout.widget.ConstraintLayout>